@@ -4,5 +4,5 @@ SUPPORT
     should, or if you have a feature request, please open an issue on this
     project's GitHub issue tracker:
 
-    https://github.com/plicease/FFI-Platypus-Lang-CPP/issues
+    https://github.com/PerlFFI/FFI-Platypus-Lang-CPP/issues
 
