@@ -495,14 +495,14 @@ If something does not work as advertised, or the way that you think it
 should, or if you have a feature request, please open an issue on this 
 project's GitHub issue tracker:
 
-L<https://github.com/plicease/FFI-Platypus-Lang-CPP/issues>
+L<https://github.com/PerlFFI/FFI-Platypus-Lang-CPP/issues>
 
 =head1 CONTRIBUTING
 
 If you have implemented a new feature or fixed a bug then you may make a 
 pull reequest on this project's GitHub repository:
 
-L<https://github.com/plicease/FFI-Platypus-Lang-CPP/issues>
+L<https://github.com/PerlFFI/FFI-Platypus-Lang-CPP/issues>
 
 Caution: if you do this too frequently I may nominate you as the new 
 maintainer.  Extreme caution: if you like that sort of thing.
