@@ -1,5 +1,7 @@
 Revision history for Perl module FFI::Platypus::Lang::CPP
 
+  - Moved to the PerlFFI GitHub org
+
 0.04  Feb 2, 2015
   - Update documentation.
 
